frontend/packages/model-registry/manifests/base/model-registry-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-registry-ui
  labels:
    app: model-registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-registry-ui
  template:
    metadata:
      labels:
        app: model-registry-ui
    spec:
      serviceAccountName: model-registry-ui
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      containers:
      - name: model-registry-ui
        image: model-registry-ui
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 30
          timeoutSeconds: 15
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 15
          timeoutSeconds: 15
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 2Gi
        ports:
          - containerPort: 8443
            name: https
        volumeMounts:
        - name: tls-cert
          mountPath: /etc/tls/private
          readOnly: true
        args:
          - "--deployment-mode=federated"
          - "--auth-method=user_token"
          - "--auth-token-header=x-forwarded-access-token"
          - "--auth-token-prefix="
          - "--port=8443"
          - "--cert-file=/etc/tls/private/tls.crt"
          - "--key-file=/etc/tls/private/tls.key"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
      volumes:
      - name: tls-cert
        secret:
          secretName: model-registry-ui-tls
