frontend/packages/model-registry/manifests/base/model-registry-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-registry-ui-service
  labels:
    app: model-registry-ui
    run: model-registry-ui
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: model-registry-ui-tls
spec:
  selector:
    app: model-registry-ui
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
  type: ClusterIP
